--- a/src/index.template.html
+++ b/src/index.template.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="javascript">
   <head>
     <meta charset="utf-8">
-    <title>webapp demo</title>
+    <title>Style Architecture</title>
     <%=htmlWebpackPlugin.files.webpackManifest%>
   </head>
   <body>
